# Django-boilerplate

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  README.rst  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
scripts/: entrypoint.sh
server/: celery.py  settings.py
src/: manage.py
src/base/utils/: collections.py  misc.py  settings.py
src/core/: celery.py  wsgi.py
src/core/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
src/core/settings/templetes/: settings.dev.py
